--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -115,7 +115,7 @@ body.courses__index, body.courses__learning_center, body.teachers__index {
   }
   //==============================
   //珠宝课程教学条件样式
-  //电动汽车
+  //新能源汽车
   .related-download{
     margin-top: 40px;
     padding: 20px 30px;
