--- a/app/views/courses/4/_course_content.html.erb
+++ b/app/views/courses/4/_course_content.html.erb
@@ -1,23 +1,24 @@
 <a href="javascript:void(0)" class="btn btn-default btn-primary by-btn-bg course-content-nav"><strong>教学内容的具体表现形式</strong></a>
 <a href="javascript:void(0)" class="btn btn-default course-content-nav"><strong>教学内容的组织与安排</strong></a>
 <a href="javascript:void(0)" class="btn btn-default course-content-nav"><strong>教学内容的授课计划</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-nav"><strong>教学内容的PPT</strong></a>
 <br><br>
 <div class="container-fluid course-content-div">
 	<dl>
 		
-		<dd style="text-indent:2em">课程教学内容表现形式多样，包括：《电动汽车结构与维修（理实一体）》教材，及配套的《电动汽车结构与维修（理实一体）技能训练指导书》教材。
+		<dd style="text-indent:2em">课程教学内容表现形式多样，包括：《电动汽车结构与维修（理实一体）》教材，及配套的《新能源汽车结构与维修（理实一体）技能训练指导书》教材。
 		</dd>
 		
 		<dd style="text-indent:2em">课程PPT及视频、微课、课后习题、技能训练实验报告、讲义、教案，校企合作及工学结合等内容已经上网，在学院CRP网络、“课堂中心”均可以查询。
-        相关的《×××任务工作单》 、《×××工作流程表》、《×××故障处理流程表》、《电动汽车运转记录表》、《电动汽车修竣后检视路试表 》和《电动汽车二级维修前检测诊断记录》、《×××任务评价考核表》等岗位学习辅导资料，仿真软件应用，再现电动汽车系统检测维修与汽车电工电力维修的真实的工作场景，现场技能训练实践教学。
+        相关的《×××任务工作单》 、《×××工作流程表》、《×××故障处理流程表》、《新能源汽车运转记录表》、《新能源汽车修竣后检视路试表 》和《新能源汽车二级维修前检测诊断记录》、《×××任务评价考核表》等岗位学习辅导资料，仿真软件应用，再现新能源汽车系统检测维修与汽车电工电力维修的真实的工作场景，现场技能训练实践教学。
         济光-新侨-校校共建具有校际与校企间协同教学的优质教学资源课程共享服务的SAKAI平台。
         </dd>
 		
 		<dd style="text-indent:2em">校园网CRP课堂中心均可以让学生学习交流。本课程具有丰富的网络课程的教学资源丰富，包括：多媒体课件、微课、录相（可以手机登录学习） 、技能考证项目操作微视频、电子教案、技能训练指导书、习题库、试题库、教学大纲、教学计划、答疑室和参考资料等教学辅助资料。学生通过网络与任课教师进行交流，可以提高学生的学习积极性和主动性，扩大学生的知识面。</dd>
 		
-		<dd style="text-indent:2em">电动汽车结构与维修（理实一体）》课程多媒体PPT、微课及电动汽车特种电工职业资格、汽车修理电工职业资格考证、汽车修理工职业资格考证等项目实践操作微视频已经上网，学生随时可以用手机下载学习，进行答疑交流。电动汽车的纯电动汽车、混合动力汽车类型、结构、原理、拆装、维修、检测等内容，各类电工电力工具、专用检测仪器使用方法均可以及时了解与掌握。</dd>
+		<dd style="text-indent:2em">新能源汽车结构与维修（理实一体）》课程多媒体PPT、微课及新能源汽车特种电工职业资格、汽车修理电工职业资格考证、汽车修理工职业资格考证等项目实践操作微视频已经上网，学生随时可以用手机下载学习，进行答疑交流。新能源汽车的纯新能源汽车、混合动力汽车类型、结构、原理、拆装、维修、检测等内容，各类电工电力工具、专用检测仪器使用方法均可以及时了解与掌握。</dd>
 		
-		<dd style="text-indent:2em">本次上海市民办高校“强师工程”培训中心，在我校建立汽车分校，首次举办“电动汽车”培训班，专业带头人黄虎、电动汽车实训基地主任林金地等教师亲自上讲台讲授，在电动汽车实训基地亲自指导技能操作，理实一体化教学，使在场的教师感受教学方法、教学手段、教学理念的同时，学到电动汽车的新技术、新知识。
+		<dd style="text-indent:2em">本次上海市民办高校“强师工程”培训中心，在我校建立汽车分校，首次举办“新能源汽车”培训班，专业带头人黄虎、新能源汽车实训基地主任林金地等教师亲自上讲台讲授，在新能源汽车实训基地亲自指导技能操作，理实一体化教学，使在场的教师感受教学方法、教学手段、教学理念的同时，学到新能源汽车的新技术、新知识。
 		</dd>
 	</dl>
 </div>
@@ -42,4 +43,77 @@
            <%= image_tag("course_4/content7.png")%>
       </div>
   </div>
+</div>
+<div class="container-fluid course-content-div" style="display: none;">
+  <ul>
+    <li class="col-sm-12 my-title"><strong>PPT课件</strong></li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务2技能训练混合动力汽车检测仪的使用</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力控制系统使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力汽车常见故障诊断</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力汽车的工作模式</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力汽车的结构与原理</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力汽车动力发动机控制系统使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力汽车动力系统使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动力汽车蓄电池组件使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3混合动汽车结构与原理</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3技能训练1混合动力汽车观察与研究</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3技能训练2混合动力汽车工作模式试验</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3技能训练3混合动力汽车蓄电池组件使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务3技能训练4混合动力汽车动力控制系统使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务4纯新能源汽车电力驱动系统使用与维修</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务4纯新能源汽车动力系统电子技术</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务4纯新能源汽车动力系统故障诊断</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+    <li class="col-sm-12">
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">学习任务4纯新能源汽车动力系统控制技术</a>
+      <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    </li>
+  </ul>
 </div>
