--- a/app/views/courses/4/_course_data.html.erb
+++ b/app/views/courses/4/_course_data.html.erb
@@ -6,116 +6,116 @@
 <ul class="container-fluid">
   <li class="col-sm-12 my-title" ><strong>教学录像</strong></li>
   <li class="col-sm-12">
-    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">电动汽车结构与维修说课夏月琴</a>
-    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">1.新能源汽车结构与维修说课夏月琴</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12 my-title"><strong>申请表</strong></li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">1.课程负责人情况夏月琴</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">2.主讲教师1黄虎</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">2.主讲教师2袁春华</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">2.主讲教师3张璐嘉</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">2.主讲教师情况</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">1.课程负责人情况夏月琴</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">3.申报材料课程团队</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">2.主讲教师1黄虎</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li> 
+  <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">2.主讲教师2袁春华</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">4-1课程性质与作用</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">4-2课程设计的理念与思路</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">2.主讲教师3张璐嘉</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">5-1教学内容的针对性与适用性</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">5-2教学内容的组织与安排</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">5-3教学内容的具体表现形式</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">6-1教学模式的设计与创新</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">6-2多种教学方法的应用</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">6-3现代教学技术手段的应用</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">6-4网络教学资源和硬件环境</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">7-1校内实训设备与实训环境</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">7-2校外实习基地的建设与利用</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">8-1校外专家、行业企业专家、校内督导及学生评价</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">8-1学生各类技能比赛获奖、技能考证</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">8-2社会认可度</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">9-1本课程的特色与创新点</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">9-2 本课程与国内外同类课程的比较</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">9-3本课程改进的方向与途径</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">10-1 本课程的建设目标、步骤及五年内课程资源上网时间表</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">10-2 三年内全程授课录像上网时间表</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">2.主讲教师情况</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">11.学校的政策支持与措施</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">3.申报材料课程团队</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">附件1.精品课程申报表（高职）交的</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">4-1课程性质与作用</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">4-2课程设计的理念与思路</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">5-1教学内容的针对性与适用性</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">5-2教学内容的组织与安排</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">5-3教学内容的具体表现形式</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">6-1教学模式的设计与创新</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">6-2多种教学方法的应用</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">6-3现代教学技术手段的应用</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">6-4网络教学资源和硬件环境</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">7-1校内实训设备与实训环境</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">7-2校外实习基地的建设与利用</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">8-1校外专家、行业企业专家、校内督导及学生评价</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">8-1学生各类技能比赛获奖、技能考证</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">8-2社会认可度</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">9-1本课程的特色与创新点</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">9-2 本课程与国内外同类课程的比较</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">9-3本课程改进的方向与途径</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">10-1 本课程的建设目标、步骤及五年内课程资源上网时间表</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">10-2 三年内全程授课录像上网时间表</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">11.学校的政策支持与措施</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">11.附件1.精品课程申报表（高职）交的</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
 </ul>
