--- a/app/views/courses/4/_platform.html.erb
+++ b/app/views/courses/4/_platform.html.erb
@@ -35,33 +35,53 @@
   </li>
   <li class="col-md-12 my-title"><strong>顶岗实习总结</strong></li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车实习周记参考</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车实习周记参考</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-md-12 my-title"><strong>毕业综合训练报告</strong></li>
 
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">全国汽车维修工中级（汇总题库）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">毕业综合训练过程记录－新版</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（查找隐患1）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">封面</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（答案）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">论文样本</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（基本操作2）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">目录</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（五部分识别判定）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">____级毕____级毕业综合训练成绩.xls业综合训练成绩</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（五部分识别判定1）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">____级毕业综合训练总结报告</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">____级指导教师工作量统计</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">___级毕业综合训练基本情况汇总</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">（教务〔2014〕12号）学生毕业综合训练实施意见2014.11.28</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">12、毕业综合训练情况汇总（空）</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">12、立项书任务书</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-md-12 my-title"><strong>企业调研报告</strong></li>
