--- a/app/views/courses/4/_teach_improve.html.erb
+++ b/app/views/courses/4/_teach_improve.html.erb
@@ -4,7 +4,7 @@
 	<dd>3.工学结合的课程改革中，一是对专业基础课程进行改革；二是专业核心课程加大实行“理实一体化”教学；三是加大技能训练的教学的比例。
 </dd>
 	<dd>4.按照高等职业技术教育学生专业技能的形成规律，建设行动体系的课程，基于工作过程设置学习情境，理论与实践教学的学时比例接近1：2，注重专业知识传授的同时，突出实践技能的培养。</dd>
-	<dd>5.加强与上汽集团、中科力帆电动汽车有限公司、深圳市电动汽车风向标教育资源股份有限公司的校企合作，融合发展。做到融合行业办学；融合企业育人；融合生产教学。在条件许可的情况下，积极探索、实施“订单式”培养方案，使本课程的建设、改革更能紧贴社会、企业的需求；满足社会、企业的需求。
+	<dd>5.加强与上汽集团、中科力帆新能源汽车有限公司、深圳市新能源汽车风向标教育资源股份有限公司的校企合作，融合发展。做到融合行业办学；融合企业育人；融合生产教学。在条件许可的情况下，积极探索、实施“订单式”培养方案，使本课程的建设、改革更能紧贴社会、企业的需求；满足社会、企业的需求。
 </dd>
 	<dd>6.加强实施中青年教师的培养方案，注重教师的继续教育与深造，推进“双师制”工作，同时积极挑选企业兼职教师参与本课程的教学活动，使教师队伍充满生机活力，使本课程的建设、改革能持续发展。
 </dd>
