--- a/app/views/courses/4/_teacher_resource.html.erb
+++ b/app/views/courses/4/_teacher_resource.html.erb
@@ -31,7 +31,7 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">开关磁阻电动机_工作原理视频</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">开关磁阻新能源机_工作原理视频</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
    <li class="col-sm-12">
@@ -43,82 +43,13 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车对电池的要求-黄虎</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车对电池的要求-黄虎</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
-  <li class="col-sm-12 my-title"><strong>PPT课件</strong></li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务2技能训练混合动力汽车检测仪的使用</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力控制系统使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力汽车常见故障诊断</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力汽车的工作模式</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力汽车的结构与原理</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力汽车动力发动机控制系统使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力汽车动力系统使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动力汽车蓄电池组件使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3混合动汽车结构与原理</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3技能训练1混合动力汽车观察与研究</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3技能训练2混合动力汽车工作模式试验</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3技能训练3混合动力汽车蓄电池组件使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务3技能训练4混合动力汽车动力控制系统使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务4纯电动汽车电力驱动系统使用与维修</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务4纯电动汽车动力系统电子技术</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务4纯电动汽车动力系统故障诊断</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务4纯电动汽车动力系统控制技术</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12 my-title"><strong>★博世公司职教年会电动汽车研讨培训资源</strong></li>
+  <li class="col-sm-12 my-title"><strong>★博世公司职教年会新能源汽车研讨培训资源</strong></li>
 
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车大讲堂</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车大讲堂</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12 my-title"><strong>★聚合物锂离子动力电池基础知识培训资源</strong></li>
@@ -126,9 +57,9 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">2 锂离子电池基础知识培训教材</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-sm-12 my-title"><strong>电动汽车资源课件</strong></li>
+  <li class="col-sm-12 my-title"><strong>新能源汽车资源课件</strong></li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">第一章电动汽车基础</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">第一章新能源汽车基础</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
@@ -193,11 +124,11 @@
   </li>
 
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">7 电动汽车电池热管理系统</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">7 新能源汽车电池热管理系统</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车动力电池基础知识</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车动力电池基础知识</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
@@ -205,10 +136,10 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车电池</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车电池</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
-  <li class="col-sm-12 my-title"><strong>★全国电动汽车研讨培训资源</strong></li>
+  <li class="col-sm-12 my-title"><strong>★全国新能源汽车研讨培训资源</strong></li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">麒麟EV创业谷”创新与思考—冯峰</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
@@ -230,27 +161,27 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">纯电动车维修案例分析—李阿桥/a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">纯新能源车维修案例分析—李阿桥/a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车充电设施及运营综述 -陈滋健</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车充电设施及运营综述 -陈滋健</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车充换电服务网络及标准化—吾喻明</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车充换电服务网络及标准化—吾喻明</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车的轻量化设计-赵振东/a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车的轻量化设计-赵振东/a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车高压安全-吴海啸</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车高压安全-吴海啸</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动商用车整车开发与设计 --张涌</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源商用车整车开发与设计 --张涌</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
@@ -278,11 +209,11 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车产业发展与企业人才需求-汪先锋</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车产业发展与企业人才需求-汪先锋</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车产业现状及热点分析-张谦</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车产业现状及热点分析-张谦</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
 
