--- a/app/views/courses/4/_combine.html.erb
+++ b/app/views/courses/4/_combine.html.erb
@@ -6,17 +6,17 @@
   <dl>
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持课程实训教学目标服务于专业培养目标</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">  按照“专业培养目标服务于电动汽车人才市场需求，课程教学目标服务于专业培养目标”的原则，发挥课程在专门人才培养计划中的功能和作用，发挥课程对学生终身发展的价值，选择和确定课程实训教学内容的框架和体系。</dd>
+      <dd style="text-indent:2em">  按照“专业培养目标服务于新能源汽车人才市场需求，课程教学目标服务于专业培养目标”的原则，发挥课程在专门人才培养计划中的功能和作用，发挥课程对学生终身发展的价值，选择和确定课程实训教学内容的框架和体系。</dd>
      </div>
 
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持学生知识、能力、素质三位一体教学</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">针对电动汽车专业职业岗位（群）的需要，将课程实践教学的教学目睹标分解为知识目标、能力目标和实践性目标，将学习过程与学习方法、情感态度与价值观的培养纳入课程教学目标。把学生知识、能力、素质三位一体的原则落实到课程教学的始终</dd>
+      <dd style="text-indent:2em">针对新能源汽车专业职业岗位（群）的需要，将课程实践教学的教学目睹标分解为知识目标、能力目标和实践性目标，将学习过程与学习方法、情感态度与价值观的培养纳入课程教学目标。把学生知识、能力、素质三位一体的原则落实到课程教学的始终</dd>
      </div>
 
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 以情境领域为主线，突出学生综合能力素质培养</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">  课程负责人对《电动汽车结构与维修（理实一体）》课程进行整体设计，共设计七个工作任务，电动汽车维修知识、电动汽车检测仪器的使用、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。每个工作任务明确教学目标、学习情境、相关实践知识、工作任务单、岗位派工单、思考与练习。</dd>
+      <dd style="text-indent:2em">  课程负责人对《电动汽车结构与维修（理实一体）》课程进行整体设计，共设计七个工作任务，新能源汽车维修知识、新能源汽车检测仪器的使用、混合动力汽车使用与维修、纯新能源汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。每个工作任务明确教学目标、学习情境、相关实践知识、工作任务单、岗位派工单、思考与练习。</dd>
      </div>
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校企双主体教学团队担任课程教学</p>
     <div class="container-fluid">
@@ -73,11 +73,11 @@
       <dd class="text-center"><%= image_tag("course_4/combine5.png")%></dd>
       <dt>2、混合动力系统的组成及主要部件的作用</dt>
       <dd>（1）发电机（MG1）<br>
-      发电机由发动机带动旋转产生高压电，为电动机（MG2）供电或为HV蓄电池。同时，它还可以作为起动机起动发动机。</dd>
-      <dd>（2）电动机（MG2）<br>
-      电动机（MG2）由来自发电机（MG1）或HV蓄电池的电能驱动，产生车辆行驶动力，以及制动期间或制动踏板未被踩下时产生电动为HV蓄电池再次充电（再生制动控制）。 </dd>
+      发电机由发动机带动旋转产生高压电，为新能源机（MG2）供电或为HV蓄电池。同时，它还可以作为起动机起动发动机。</dd>
+      <dd>（2）新能源机（MG2）<br>
+      新能源机（MG2）由来自发电机（MG1）或HV蓄电池的电能驱动，产生车辆行驶动力，以及制动期间或制动踏板未被踩下时产生新能源为HV蓄电池再次充电（再生制动控制）。 </dd>
       <dd>（3）HV蓄电池<br>
-      HV蓄电池在车辆起步、加速和上坡时，将制动踏板未被踩下时再次充入的电能提供给电动机（MG2）。</dd>
+      HV蓄电池在车辆起步、加速和上坡时，将制动踏板未被踩下时再次充入的电能提供给新能源机（MG2）。</dd>
       <dd>（4）蓄电池ECU <br>
       蓄电池ECU监控HV蓄电池的充电状态。</dd>
       <dd>（5）变频器总成<br>
@@ -87,13 +87,13 @@
       <dd>2） DC/DC转换器<br>
       将电压从DC201.6V降到12V，为电气设备供电，以及辅助蓄电池再次充电（DC12V）。</dd>
       <dd>3）空调变频器<br>
-      将HV蓄电池的额定电压由DC201.6V转换为AC201.6V，为空调系统中电动变频压缩机供电。</dd>
+      将HV蓄电池的额定电压由DC201.6V转换为AC201.6V，为空调系统中新能源变频压缩机供电。</dd>
       <dd>（6）HV ECU <br>
       HV ECU接收传感器及有关ECU（发动机ECU、蓄电池ECU、制动防滑控制ECU和动力转向ECU）的信息，计算所需的扭矩和输出功率，并将计算结果发送到变频器总成、发动机ECU、蓄电池ECU和制动防滑控制ECU。</dd>
       <dd>（7）发动机ECU <br>
       发动机ECU根据接收来自HV ECU 的目标发动机转速和所需的发动机动力，启动ETCS-i（智能电子节气门控制系统）。</dd>
       <dd>（8）制动防滑控制ECU <br>
-      制动防滑控制ECU控制电动机（MG2）产生的再生制动以及控制液压制动。</dd>
+      制动防滑控制ECU控制新能源机（MG2）产生的再生制动以及控制液压制动。</dd>
       <dd>（9）加速踏板位置传感器 <br>
       加速踏板位置传感器将加速踏板角度转换为电信号输送到HV ECU。</dd>
       <dd>（10）挡位传感器<br>
