--- a/app/views/courses/4/_main.html.erb
+++ b/app/views/courses/4/_main.html.erb
@@ -4,21 +4,21 @@
     <ul class="container-fluid">
       <li class="col-sm-12 my-title"><strong>教学视频</strong></li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">电动汽车结构与维修（理实一体）主讲教师视频及教学视频</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">新能源汽车结构与维修（理实一体）主讲教师视频及教学视频</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
       <li class="col-sm-12 my-title"><strong>课程设计</strong></li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">电动汽车结构与维修课程整体设计</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">新能源汽车结构与维修课程整体设计</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
       <li class="col-sm-12 my-title"><strong>课程标准</strong></li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《电动汽车结构与维修》课程标准</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《新能源汽车结构与维修》课程标准</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《电动汽车结构与维修》课程实践教学标准</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《新能源汽车结构与维修》课程实践教学标准</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
     </ul> 
@@ -78,6 +78,8 @@
     <a href="javascript:void(0)" class="btn btn-default">改进方向与途径</a>
     &nbsp;&nbsp;
     <a href="javascript:void(0)" class="btn btn-default">同类课程的比较</a>
+    &nbsp;&nbsp;
+    <a href="javascript:void(0)" class="btn btn-default">相关文件</a>
   </div>
   <div class="fast-entry-content">
     <div class="entry-content">
@@ -91,6 +93,9 @@
     </div>
     <div class="entry-content">
       <%= render partial: "courses/4/teach_compare"%>
+    </div>
+    <div class="entry-content">
+      <%= render partial: "courses/4/related_paper"%>
     </div>
   </div>
 </div>
